# workshop-python-aula16

./: README.md  drop_table.py  main.py  pyproject.toml  read2.py
